addon/chrome/content/overlay/browser.css
/* ... */
#TabsToolbar[tabmix-show-newtabbutton="aftertabs"]:not(:is([customizing="true"], [customizing=""]))
  #tabbrowser-tabs:not([overflow]) #tabbrowser-arrowscrollbox > #tabs-newtab-button[command="cmd_newNavigatorTab"],
#TabsToolbar[tabmix-show-newtabbutton="aftertabs"]:not(:is([customizing="true"], [customizing=""]))
  #tabbrowser-tabs:not([overflow]) #tabbrowser-arrowscrollbox #tabbrowser-arrowscrollbox-periphery > #tabs-newtab-button[command="cmd_newNavigatorTab"] {
  display: flex;
  align-items: center;
  visibility: visible;
}

#TabsToolbar:not([collapsed]) {
  /* override firefox rule from browser.css */
  #tabbrowser-tabs[hasadjacentnewtabbutton]:not([overflow]) ~ #new-tab-button {
    display: flex;
    align-items: center;
  }

  &[tabmix-show-newtabbutton*="side"] {
    #tabbrowser-tabs[hasadjacentnewtabbutton]:not([overflow]) ~ #new-tab-button,
    #new-tab-button {
      visibility: visible;
    }
  }

  &[tabmix-show-newtabbutton="aftertabs"] {
    #tabbrowser-tabs[overflow] ~ #new-tab-button {
      visibility: visible;
    }
  }
}

#TabsToolbar:not([customizing])[tabmix-show-newtabbutton*="aftertabs"] #new-tab-button,
#TabsToolbar:not([tabmix-show-newtabbutton]) #new-tab-button {
  visibility: collapse;
}

/*** Private-tab compatibility ***/
#privateTab-afterTabs-openNewPrivateTab {
  vertical-align: bottom;
}

#TabsToolbar[currentset*="privateTab-toolbar-openNewPrivateTab"]:not([tabmix-show-newtabbutton])
  #tabbrowser-tabs:not([overflow]) #tabbrowser-arrowscrollbox > #tabs-newtab-button[command="cmd_newNavigatorTab"],
#TabsToolbar[currentset*="privateTab-toolbar-openNewPrivateTab"]:not([tabmix-show-newtabbutton])
  #tabbrowser-tabs:not([overflow]) #tabbrowser-arrowscrollbox #tabbrowser-arrowscrollbox-periphery > #tabs-newtab-button[command="cmd_newNavigatorTab"] {
  display: none; /* override privateTab visibility: visible !important; */
}

#TabsToolbar[currentset*="privateTab-toolbar-openNewPrivateTab"][tabmix-show-newtabbutton*="side"]
  #tabbrowser-tabs:not([overflow]) #tabbrowser-arrowscrollbox > #tabs-newtab-button,
#TabsToolbar[currentset*="privateTab-toolbar-openNewPrivateTab"][tabmix-show-newtabbutton*="side"]
  #tabbrowser-tabs:not([overflow]) #tabbrowser-arrowscrollbox #tabbrowser-arrowscrollbox-periphery > #tabs-newtab-button {
  display: none; /* override privateTab visibility: visible !important; */
}

#TabsToolbar[currentset*="privateTab-toolbar-openNewPrivateTab"][tabmix-show-newtabbutton*="aftertabs"]
     #privateTab-toolbar-openNewPrivateTab {
  visibility: collapse; /* missing rule form privateTab */
}

#TabsToolbar[currentset*="privateTab-toolbar-openNewPrivateTab"][tabmix-show-newtabbutton*="aftertabs"]:not(:is([customizing="true"], [customizing=""]))
     #tabbrowser-tabs #tabbrowser-arrowscrollbox > #privateTab-afterTabs-openNewPrivateTab,
#TabsToolbar:not([collapsed])[tabmix-show-newtabbutton*="side"] > #privateTab-toolbar-openNewPrivateTab {
  visibility: visible;
}

/***  Tab opening animation  ***/
.tab-progress-container > .tab-progress:not([fadein], [pinned]),
.tab-icon:not([fadein], [pinned]) > .tab-protect-icon,
.tab-icon:not([fadein], [pinned]) > .tab-lock-icon,
.tab-icon:not([fadein], [pinned]) > .tab-reload-icon {
   display: none !important;
}

/* we use display: inline-flex !important;
so display: none !important; does not hide the button */
.tab-close-button:not([fadein]) {
  visibility: hidden;
}

/* we don't remove top and bottom borders to prevent tab height from shrinking */
.tabbrowser-tab:not([fadein], [pinned]) {
  border-left: none;
  border-right: none;
}

/*** backward compatibility with theme that still use old tabmix tab binding ***/
.tabbrowser-tab:not([fadein], [pinned]) .tab-text-stack > .tab-progress {
  display: none !important;
}

/***  For progressmeter on tab Firefox 4.0+  ***/
.tab-progress {
  margin: 0;
  min-width: 0;
}

.tabbrowser-tab > .tab-stack > .tab-progress-container {
  pointer-events: none;
}

.tabbrowser-tab > .tab-stack > .tab-progress-container > .tab-progress {
  display: none;
}

#tabbrowser-tabs[tabmix_progressMeter] #tabbrowser-arrowscrollbox .tabbrowser-tab:not([pinned])[busy] > .tab-stack > .tab-progress-container > .tab-progress[value] {
  display: inline-block;
}

.tab-progress > .progress-bar:-moz-locale-dir(ltr) {
  background-image: linear-gradient(to right, rgb(255 255 255 / 10%) 50%,
                                        rgb(255 255 255 / 40%) 90%,
                                        rgb(255 255 255 / 80%));
}

.tab-progress > .progress-bar:-moz-locale-dir(rtl) {
  background-image: linear-gradient(to left, rgb(255 255 255 / 10%) 50%,
                                        rgb(255 255 255 / 40%) 90%,
                                        rgb(255 255 255 / 80%));
}

/* :::: widthFitTitle :::: */

/* more dynamic rules are in tab.js addDynamicRules */
#tabbrowser-tabs[orient="horizontal"][tabmix-flowing="multibar"][widthFitTitle] #tabbrowser-arrowscrollbox .tabbrowser-tab:not([pinned]) {
  flex: 0 0 auto !important;
  width: auto !important;
}

#tabbrowser-tabs[orient="horizontal"]:not([widthFitTitle]) #tabbrowser-arrowscrollbox .tabbrowser-tab:not([pinned], [tiletabs-single="hidden"]) {
  flex: 1 1 0% !important;
}

#tabbrowser-tabs[orient="horizontal"][widthFitTitle] #tabbrowser-arrowscrollbox
.tabbrowser-tab:not([pinned]) > .tab-stack > .tab-content > .tab-close-button {
  margin-inline-start: 1px !important;
}

/* we add #TabsToolbar to get higher specificity, in order to override Firefox rule */
#TabsToolbar #tabbrowser-tabs:not([overflow], [hashiddentabs], [showalltabsbutton]) ~ #alltabs-button {
  display: none;
}

#TabsToolbar #tabbrowser-tabs[showalltabsbutton] ~ #alltabs-button {
  display: flex;
  align-items: center;
}

#TabsToolbar #tabbrowser-tabs:not([overflow], [showalltabsbutton])[using-closing-tabs-spacer] ~ #alltabs-button {
  /* temporary space to keep a tab's close button under the cursor */
  display: flex;
  visibility: hidden;
}
/* ... */

